# SpotifyBinds

./: .gitignore  .spotify_binds.json  .spotify_settings.json  Cargo.toml  README.md  build.rs
src/: UI.rs  hotkeyreg.rs  iconhandler.rs  lib.rs  main.rs  savetoken.rs  spotifyfunctions.rs
