[package]
name = "rspotifytest"
version = "0.1.0"
edition = "2024"

[dependencies]
rspotify = { version = "0.15.1", features = ["cli", "env-file"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
serde_json = "1.0.143"
serde = "1.0.228"
eframe = "0.33.0"
egui = "0.33.0"
rdev = "0.5.3"
egui-notify = "0.21.0"
winreg = "0.10"
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

